# patch-wise-pc

./: .gitignore  cli.py  environment.yml  pyproject.toml
.github/workflows/: docker-build.yml
clusters/docker/: Dockerfile  build.sh
clusters/k8s/: lighweight-pod.yaml  output-pvc.yaml  run_shared.sh  template-job.yaml  train-template.yaml
clusters/slurm/: check_outputs.py
experiments/bench-cifar/: config_grid.json
experiments/bench-colour-patch-32/: config_grid.yaml
experiments/bench-colour-patch-64/: config_grid.yaml
experiments/bench-composite/: config_grid.yaml
experiments/bench-composite-low/: config_grid.yaml
experiments/bench-high-conf/: config_grid.yaml
experiments/bench-mnist/: config_grid.json
experiments/bench-patch-celebA/: config_grid.yaml
experiments/bench-patch-cifar/: config_grid.yaml
experiments/bench-patch-imagenet/: config_grid.yaml
experiments/bench-patch-mnist/: config_grid.yaml
experiments/bench-pic-colour/: config_grid.yaml
notebooks/: aggregate_mnist_local.ipynb  benchmark_celebA.ipynb  benchmark_cifar.ipynb  benchmark_mnist.ipynb  improve_cifar.ipynb  improve_mnist.ipynb  prototype.ipynb  prototype_cifar.ipynb  stitching_circuits.ipynb  test_data_pt.ipynb  test_graph.ipynb  test_monarch.ipynb  to_dl.txt
scripts/: compress_celeba.py  compress_imagenet.py  copy_check.sh  cp_check.sh
src/: benchmark_logic.py  benchmark_sampling.py  colours.py  config.py  dataset.py  em_optimizer.py  hparam_check.py  kubernetes.py  monarch_hclt.py  orchestrator.py  share_param.py  slurm.py  tune.py  tune_grid.py  utils.py
(+5 files in other folders)
